--- a/Etrafe3ly/package.json
+++ b/Etrafe3ly/package.json
@@ -23,10 +23,8 @@
     "@ionic-native/core": "~4.17.0",
     "@ionic-native/splash-screen": "~4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
-    "@ionic/lab": "^1.0.15",
     "@ionic/storage": "2.2.0",
-    "angularfire2": "^4.0.0-rc.1",
-    "firebase": "^4.0.0",
+    "firebase": "^5.6.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -35,6 +33,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.1",
+    "@ionic/lab": "1.0.15",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project"
