--- a/Etrafe3ly/package.json
+++ b/Etrafe3ly/package.json
@@ -29,6 +29,7 @@
     "cordova-android": "7.1.4",
     "cordova-browser": "^5.0.4",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-email-composer": "0.8.15",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.5",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -56,7 +57,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-email-composer": {}
     },
     "platforms": [
       "android",
