--- a/Etrafe3ly/package.json
+++ b/Etrafe3ly/package.json
@@ -26,7 +26,7 @@
     "@ionic-native/splash-screen": "~4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
     "@ionic/storage": "2.2.0",
-    "cordova-android": "7.1.4",
+    "cordova-android": "^7.1.4",
     "cordova-browser": "^5.0.4",
     "cordova-ios": "4.5.5",
     "cordova-plugin-camera": "4.0.3",
@@ -39,6 +39,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.6.0",
     "ionic-angular": "3.9.2",
+    "ionic3-star-rating": "^1.1.5",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
